--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,9 @@ dependencies:
   firebase_core: ^1.22.0
   cloud_firestore: ^3.4.7
   internet_connection_checker: ^0.0.1+4
-  blurry_modal_progress_hud: ^1.0.3
   progress_indicator_button: ^0.0.3
   rename: ^2.0.1
+  loading_indicator: ^3.1.0
 
 dev_dependencies:
   flutter_test:
