--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   loading_indicator: ^3.1.0
   intl: ^0.17.0
   shared_preferences: ^2.0.15
+  timeago: ^3.3.0
 
 dev_dependencies:
   flutter_test:
